# ImmediateEarth

./: .gitignore  CHANGES.md  CODE_OF_CONDUCT.md  README.md  components.d.ts  package.json  pnpm-lock.yaml
.cursor/rules/: tauri.mdc
.github/workflows/: release.yml
.lingma/rules/: project_rule.md
examples/code/: H8img.py
scripts/: release.mjs  updatelog.mjs  updater.mjs
src/: App.vue  store.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: capability.json  main-capability.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  wallpaper.rs
src/components/: ClockOverlay.vue  DetailsView.vue  GreetComponent.vue  MainView.vue  SatelliteImageComponent.vue
