[package]
name = "ImmediateEarth"
version = "0.0.5"
description = "即刻地球"
authors = ["Yiranzai"]
edition = "2024"
repository = "https://github.com/Uninen/tauri-vue-template"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = [
    'tray-icon',
    'image-ico',
    'image-png',
] }
tauri-plugin-shell = "2.2.2"
tauri-plugin-fs = "2.3.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-prevent-default = "2.0"
reqwest = { version = "0.11", features = ["blocking"] }
image = "0.24"
chrono = { version = "0.4", features = [] }
tauri-plugin-opener = "2.3.0"
tauri-plugin-os = "2.2.2"
tauri-plugin-store = "2.2.1"
tauri-plugin-dialog = "2"
base64 = "0.22"

[target."cfg(windows)".dependencies.windows]
version = "^0.61"
features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"]

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.
